--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "colors": "^1.4.0",
     "deepmerge": "^4.2.2",
+    "fsuipc": "^0.3.0",
     "inquirer": "^7.1.0",
+    "node-simconnect": "^1.3.0-canary.9",
     "query-string": "^6.12.1"
   }
 }
